complete CRUD for Rooms/Devices and sync Swaggerfile
